# LEMP

./: CMakeLists.txt  GKlib.tgz  NOTICE.txt  README.md  instructions.txt
dataset/: h-gnmf-sample.csv  h-gnmf-sample.mma  w-gnmf-sample.csv  w-gnmf-sample.mma
examples/: CMakeLists.txt  testLemp.cc  testNaive.cpp  testPcaTree.cpp  testSimpleLsh.cc  testTa.cc  testTaNra.cpp
mips/: CMakeLists.txt  mips.h
mips/algos/: Lemp.h  Mip.h  Naive.h  PcaTree.h  SimpleLsh.h  Ta.h  TaNra.h
mips/ap/: connect.h  proto.h  select.c
mips/lsh/: CosineSketches.h  LshBins.h  RandomIntGaussians.h
mips/my_mlpack/: core.hpp
mips/my_mlpack/core/arma_extend/: arma_extend.hpp
mips/my_mlpack/core/kernels/: cosine_distance.hpp  cosine_distance_impl.hpp  example_kernel.hpp  kernel_traits.hpp  linear_kernel.hpp
mips/my_mlpack/core/math/: clamp.hpp  lin_alg.cpp  lin_alg.hpp  random.cpp  random.hpp  range.hpp  range_impl.hpp  round.hpp
mips/my_mlpack/core/metrics/: ip_metric.hpp  ip_metric_impl.hpp  lmetric.hpp  lmetric_impl.hpp
mips/my_mlpack/core/tree/: ballbound.hpp  ballbound_impl.hpp  bounds.hpp  hrectbound.hpp  hrectbound_impl.hpp  mrkd_statistic.cpp  mrkd_statistic.hpp  mrkd_statistic_impl.hpp  periodichrectbound.hpp  periodichrectbound_impl.hpp  statistic.hpp  tree_traits.hpp
mips/my_mlpack/core/tree/cover_tree/: cover_tree.hpp  cover_tree_impl.hpp  first_point_is_root.hpp  single_tree_traverser.hpp  single_tree_traverser_impl.hpp  traits.hpp
mips/my_mlpack/core/util/: cli.cpp  cli.hpp  cli_deleter.cpp  cli_deleter.hpp  cli_impl.hpp  log.cpp  log.hpp  nulloutstream.hpp  option.cpp  option.hpp  option_impl.hpp  prefixedoutstream.cpp  prefixedoutstream.hpp  prefixedoutstream_impl.hpp  save_restore_utility.cpp  save_restore_utility.hpp  save_restore_utility_impl.hpp  string_util.cpp  string_util.hpp  timers.cpp  timers.hpp  version.cpp  version.hpp
mips/my_mlpack/fastmks/: fastmks.hpp  fastmks_impl.hpp  fastmks_rules.hpp  fastmks_rules_impl.hpp  fastmks_stat.hpp
mips/retrieval/: ListsTuneData.h  Retriever.h  TuneTopk.h  apRetriever.h  blshRetriever.h  coord.h  icoord.h  lshRetriever.h  mixed.h  singleTree.h  ta.h  tanra.h
mips/structs/: Args.h  BasicStructs.h  BlshIndex.h  Bucketize.h  CandidateVerification.h  Candidates.h  Definitions.h  Lists.h  LshIndex.h  Output.h  ProbeBucket.h  QueryBatch.h  Results.h  RetrievalArguments.h  TANRAState.h  TAState.h  TreeIndex.h  VectorMatrix.h  l2apIndex.h
taLib/: CMakeLists.txt  taLib.h
taLib/algos/: PCATree.h  SimpleLSH.h  TANRA_all.h  TA_all.h  algo_with_tuning.h  naiveAlgo.h
taLib/ap/: .directory  basetypes.h  connect.h  csr.c  da_mkblas.h  defs.h  includes.h  memory.c  sort.c  struct.h
taLib/lsh/: CosineSketches.h  LICENSE  LshBins.h  RandomIntGaussians.h
taLib/my_mlpack/: core.hpp
taLib/my_mlpack/core/arma_extend/: arma_extend.hpp
taLib/my_mlpack/core/kernels/: cosine_distance.hpp  cosine_distance_impl.hpp  example_kernel.hpp  kernel_traits.hpp  linear_kernel.hpp
taLib/my_mlpack/core/math/: clamp.hpp  lin_alg.cpp  lin_alg.hpp  random.cpp  random.hpp  range.hpp  range_impl.hpp
taLib/my_mlpack/core/metrics/: ip_metric.hpp  ip_metric_impl.hpp  lmetric.hpp  lmetric_impl.hpp
taLib/my_mlpack/core/tree/: ballbound.hpp  ballbound_impl.hpp  bounds.hpp  cover_tree.hpp  hrectbound.hpp  hrectbound_impl.hpp  mrkd_statistic.cpp  mrkd_statistic.hpp  mrkd_statistic_impl.hpp  periodichrectbound.hpp  periodichrectbound_impl.hpp  statistic.hpp  tree_traits.hpp
taLib/my_mlpack/core/tree/cover_tree/: cover_tree.hpp  cover_tree_impl.hpp  first_point_is_root.hpp  single_tree_traverser.hpp  single_tree_traverser_impl.hpp  traits.hpp
taLib/my_mlpack/core/util/: cli.cpp  cli.hpp  cli_deleter.cpp  cli_deleter.hpp  cli_impl.hpp  log.cpp  log.hpp  nulloutstream.hpp  option.cpp  option.hpp  option_impl.hpp  prefixedoutstream.cpp  prefixedoutstream.hpp  prefixedoutstream_impl.hpp  save_restore_utility.cpp  save_restore_utility.hpp  save_restore_utility_impl.hpp  sfinae_utility.hpp  string_util.cpp  string_util.hpp  timers.cpp  timers.hpp  version.cpp  version.hpp
taLib/my_mlpack/fastmks/: fastmks.hpp  fastmks_impl.hpp  fastmks_rules.hpp  fastmks_rules_impl.hpp  fastmks_stat.hpp
taLib/retrieval/: ListsTuneData.h  Retriever.h  TuneTopk.h  apRetriever.h  coord.h  icoord.h  incr2.h  lshRetriever.h  mixed.h  singleTree.h  ta.h  tanra.h
taLib/structs/: Args.h  AuxStructs.h  BasicStructs.h  Bucketize.h  CandidateVerification.h  Candidates.h  Definitions.h  Functions.h  Lists.h  Lists2.h  LshIndex.h  ProbeBucket.h  QueryBatch.h  RetrievalArguments.h  TANRAState.h  TANRAState2.h  TAState.h  TAState2.h  TreeIndex.h  VectorMatrix.h  l2apIndex.h  read.cpp  read.h
tests/: CMakeLists.txt  testAlgoTuning.cc  testPCATree.cpp  testSimpleLSH.cc  testTANRA_all.cpp  testTA_all.cc
tools/: CMakeLists.txt  compare.cc  runAlgoWithTuner.cc  runLemp.cc  runNaive.cc  runPCATree.cpp  runPcaTree.cpp  runSimpleLSH.cc  runSimpleLsh.cc  runTA_all.cc  runTa.cc  runTaNra.cc
util/: CMakeLists.txt  config.h.in  evaluation.h  exception.h  io.h  random.h  sampling.h
util/evaluation/: Timer.h  benchmark.h  duration.h  formatting.h  timeval.h
util/exception/: Exception.cc  Exception.h
util/io/: convert.h  iostream.h  manipulator.h  utils.h
util/portability/: inttypes.h  time.h
util/random/: .directory  RandomWrapper.h  sequential.h  shuffle.h
util/sampling/: Aggregator.h  ReservoirSample.h  Sample.h
